--- a/src/App.scss
+++ b/src/App.scss
@@ -1,3 +1,149 @@
+/* ==========================
+ | | | | VideoWrap CSS
+=============================
+*/
+
+
+.video__container {
+  width: 100%;
+  min-height: 100vh;
+
+  display: flex;
+  flex-direction: row;
+}
+
+.video__flex {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.video__wrapper {
+  flex: 1;
+  width: 100%;
+  flex-direction: column;
+  //padding: 4rem 2rem;
+
+  @media screen and (max-width: 450px) {
+    padding: 4rem 1rem 2rem;
+  }
+}
+
+
+.video__navigation {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+
+  padding: 1rem;
+  z-index: 1001;
+  position: absolute;
+  right: 0;
+  top: 50%;
+
+  .video__navigation-dot {
+    width: 10px;
+    height: 10px;
+    border-radius: 50%;
+    background-color: #cbcbcb;
+    margin: 0.5rem;
+    border: 1px solid #000;
+
+    transition: background-color 0.2s ease-in-out;
+
+    &:hover {
+      background-color: var(--secondary-color);
+    }
+
+    @media screen and (min-width: 2000px) {
+      width: 20px;
+      height: 20px;
+    }
+  }
+}
+
+.video__social {
+  display: flex;
+  justify-content: flex-end;
+  align-items: center;
+  flex-direction: column;
+
+  padding: 1rem;
+  z-index: 1001;
+  position: absolute;
+  top: 81%;
+
+
+  a {
+    width: 40px;
+    height: 40px;
+    border-radius: 50%;
+    background-color: var(--white-color);
+    margin: 0.25rem 0;
+    border: 1px solid var(--lightGray-color);
+
+    display: flex;
+    justify-content: center;
+    align-items: center;
+
+    transition: all 0.3s ease-in-out;
+
+    svg {
+      width: 15px;
+      height: 15px;
+      color: var(--gray-color);
+    }
+
+    &:hover {
+      background-color: var(--secondary-color);
+      border-color: var(--secondary-color);
+
+      svg {
+        color: var(--white-color);
+      }
+    }
+
+    @media screen and (min-width: 2000px) {
+      width: 70px;
+      height: 70px;
+
+      margin: 0.5rem 0;
+
+      svg {
+        width: 30px;
+        height: 30px;
+      }
+    }
+  }
+}
+
+.video-copyright {
+  width: 100%;
+  padding: 2rem 0 0;
+
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-end;
+  align-items: flex-end;
+  z-index: 1001;
+  position: absolute;
+  top: 84%;
+  right: 6%;
+
+  p {
+    text-transform: uppercase;
+    color: var(--black-color);
+  }
+}
+/* =============================
+|  |  | End of Video Wrap CSS
+================================ */
+
+
+
+
+
 .app {
   background-color: var(--primary-color);
   font-family: var(--font-base);
