--- a/src/container/VideoHeader/VideoHeader.scss
+++ b/src/container/VideoHeader/VideoHeader.scss
@@ -56,6 +56,34 @@
   transition: all 0.3s ease;
 }
 
+.video__card-text {
+  font-family: var(--font-base);
+  position: absolute;
+  padding: 0.5rem 1rem;
+  border-radius: 10px;
+  background-color: #fff;
+  //top: -25px;
+  top: 50%;
+  margin-left: 50px;
+
+}
+
+
+.video__card-desc {
+  font-size: 0.8rem;
+  text-align: left;
+  color: var(--gray-color);
+  line-height: 1.5;
+  font-family: var(--font-base);
+  margin-bottom: 20px;
+  font-weight: 700;
+  text-align: center;
+
+  @media screen and (min-width: 2000px) {
+    font-size: 1.75rem;
+  }
+}
+
 
 
 
@@ -296,4 +324,15 @@
       height: 320px;
     }
   }
+}
+
+.video__work-tag {
+  position: absolute;
+  padding: 0.5rem 1rem;
+  border-radius: 10px;
+  background-color: #fff;
+  //top: -25px;
+  top: 180px;
+  font-family: var(--font-base);
+  right: 34px;
 }
