--- a/src/container/VideoHeader/VideoHeader.scss
+++ b/src/container/VideoHeader/VideoHeader.scss
@@ -45,6 +45,7 @@
 
 
 .video__about-item {
+  position: relative;
   width: 210px;
   flex-direction: column;
   /* margin: 2rem; */
@@ -54,7 +55,20 @@
   color: #000;
   cursor: pointer;
   transition: all 0.3s ease;
+
+  &:hover {
+    box-shadow: 0 0 25px rgba(0,0,0,0.2);
+  }
 }
+
+
+
+//.video__about-item:hover {
+//  box-shadow: 0 0 25px rgb(0 0 0 / 20%);
+//}
+
+
+
 
 .video__card-text {
   font-family: var(--font-base);
@@ -62,9 +76,9 @@
   padding: 0.5rem 1rem;
   border-radius: 10px;
   background-color: #fff;
-  //top: -25px;
-  top: 50%;
-  margin-left: 50px;
+  top: 155px;
+  //top: 55%;
+  //margin-left: 50px;
 
 }
 
@@ -72,11 +86,12 @@
 .video__card-desc {
   font-size: 0.8rem;
   text-align: left;
-  color: var(--gray-color);
+  //color: var(--gray-color);
   line-height: 1.5;
   font-family: var(--font-base);
   margin-bottom: 20px;
-  font-weight: 700;
+  font-weight: 800;
+  color: var(--black-color);
   text-align: center;
 
   @media screen and (min-width: 2000px) {
@@ -302,7 +317,7 @@
 }
 
 .video__profile-item {
-  width: 190px;
+  //width: 190px;
   display: flex;
   justify-content: flex-start;
   align-items: flex-start;
@@ -335,4 +350,60 @@
   top: 180px;
   font-family: var(--font-base);
   right: 34px;
+}
+
+
+.video__work-img {
+  width: 100%;
+  //height: 230px;
+  height: 180px;
+  position: relative;
+
+  img {
+    width: 100%;
+    height: 100%;
+    border-radius: 0.5rem;
+    object-fit: cover;
+  }
+
+  @media screen and (min-width: 2000px) {
+    height: 350px;
+  }
+}
+
+
+
+.video__work-hover {
+  position: absolute;
+  top: 0;
+  left: 0;
+  bottom: 0;
+  right: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0,0,0,0.5);
+
+  border-radius: 0.5rem;
+  opacity: 0;
+  transition: all 0.3s ease;
+
+  div {
+    width: 50px;
+    height: 50px;
+    border-radius: 50%;
+    background-color: rgba(0,0,0,0.5);
+    color: #fff;
+
+    margin: 1rem;
+    font-family: var(--font-base);
+    font-weight: 800;
+    cursor: pointer;
+    transition: all 0.3s ease;
+
+    svg {
+      width: 50%;
+      height: 50%;
+      color: var(--white-color);
+    }
+  }
 }
