--- a/src/container/VideoHeader/VideoHeader.scss
+++ b/src/container/VideoHeader/VideoHeader.scss
@@ -287,7 +287,8 @@
     position: absolute;
     left: 0;
     right: 0;
-    bottom: 0;
+    //bottom: 0;
+    bottom: -130px;
     z-index: 0;
     width: 100%;
     height: 100%;
