--- a/src/container/VideoHeader/VideoHeader.scss
+++ b/src/container/VideoHeader/VideoHeader.scss
@@ -295,7 +295,20 @@
   }
 
   @media screen and (max-width: 1200px) {
-    margin: 2rem 0;
+    //margin: 2rem 0;
+    right: 39.5%;
+  }
+
+  @media screen and (max-width: 935px) {
+    right: 36.5%;
+  }
+
+  @media screen and (max-width: 820px) {
+    right: 35%;
+  }
+
+  @media screen and (max-width: 414px) {
+    right: 19%;
   }
 }
 
@@ -315,6 +328,14 @@
   margin-top: 2rem;
   position: absolute;
   //top: 52%;
+
+  //@media screen and (max-width: 1095px) {
+  //  display: none;
+  //}
+
+  @media screen and (max-width: 767px) {
+    display: none;
+  }
 }
 
 .video__profile-item {
