--- a/src/container/VideoHeader/VideoHeader.scss
+++ b/src/container/VideoHeader/VideoHeader.scss
@@ -7,13 +7,14 @@
 
 .video-bg {
   width: 100%;
-  height: 100vh;
+  //height: 100vh;
   font-family: Impact, Haettenschweiler,'Arial Narrow Bold', sans-serif;
 
 
   video {
     width: 100%;
     height: 100%;
+    //height: 100vh;
     object-fit: cover;
     z-index: 1;
   }
