--- a/src/App.scss
+++ b/src/App.scss
@@ -73,8 +73,11 @@
   z-index: 1001;
   position: absolute;
   top: 81%;
-
-
+  
+  @media screen and (max-width: 767px) {
+    top: 78%;
+  }
+  
   a {
     width: 40px;
     height: 40px;
