--- a/src/container/Work/Work.scss
+++ b/src/container/Work/Work.scss
@@ -145,3 +145,31 @@
     top: -25px;
   }
 }
+
+.work__mobile-links {
+  @media screen and (min-width: 913px) {
+    display: none;
+  }
+
+  @media screen and (max-width: 912px) {
+    width: 50px;
+    height: 50px;
+    border-radius: 50%;
+    //background-color: rgba(0, 0, 0, 0.5);
+
+    color: #fff;
+    margin: 1rem;
+    font-family: var(--font-base);
+    font-weight: 800;
+    cursor: pointer;
+    background-color: #383caccc;
+  }
+
+  .work__mobile-link-svg {
+    @media screen and (max-width: 912px) {
+      width: 30px;
+      height: 30px;
+    }
+  }
+}
+
