updated portfolio website. Added show pages for each project. Updated header. Added Porfolio & Skills page.

--- a/src/App.scss
+++ b/src/App.scss
@@ -363,3 +363,23 @@
     padding: 2rem;
   }
 }
+
+
+
+.single-product__markdown {
+  //margin-top: 150px;
+  background: #fff;
+  padding: 2rem;
+  max-width: 800px;
+  margin-left: auto;
+  margin-right: auto;
+}
+
+.single-product__markdown2 {
+  //margin-top: 150px;
+  padding: 2rem;
+  max-width: 800px;
+  margin-left: auto;
+  margin-right: auto;
+  padding-bottom: 0;
+}
