--- a/src/container/Work/Work.scss
+++ b/src/container/Work/Work.scss
@@ -155,30 +155,37 @@
 }
 
 .work__mobile-links {
-  @media screen and (min-width: 913px) {
-    display: none;
-  }
+  //@media screen and (min-width: 913px) {
+  //  display: flex;
+  //}
 
-  @media screen and (max-width: 912px) {
+  //@media screen and (max-width: 912px) {
     width: 50px;
     height: 50px;
     border-radius: 50%;
     //background-color: rgba(0, 0, 0, 0.5);
 
-    color: #fff;
+    color: #828282;
     margin: 1rem;
     font-family: var(--font-base);
     font-weight: 800;
     cursor: pointer;
-    background-color: #383caccc;
-  }
+    background-color: #f0f4fc;
+    border: 1px solid #a1a0a1;
+  //}
 
   .work__mobile-link-svg {
-    @media screen and (max-width: 912px) {
+    //@media screen and (max-width: 912px) {
       width: 30px;
       height: 30px;
-    }
+    //}
   }
+}
+
+
+.work__mobile-links:hover {
+  color: #fff;
+  background-color: var(--secondary-color);
 }
 
 
