fixed image styling on single project page

--- a/src/pages/project/SingleProject.scss
+++ b/src/pages/project/SingleProject.scss
@@ -49,7 +49,7 @@
   .app__work-item2 {
     width: 600px;
     flex-direction: column;
-    margin: 2rem;
+    margin: 2rem 1rem;
     padding: 1rem;
     border-radius: 0.5rem;
     background-color: #fff;
