--- a/src/App.scss
+++ b/src/App.scss
@@ -1,3 +1,8 @@
+::-webkit-scrollbar {
+  display: none;
+}
+
+
 /* ==========================
  | | | | VideoWrap CSS
 =============================
