--- a/src/container/Skills/Skills.scss
+++ b/src/container/Skills/Skills.scss
@@ -21,9 +21,28 @@
   flex: 1;
   display: flex;
   flex-wrap: wrap;
-  justify-content: flex-start;
+  justify-content: center;
   align-items: flex-start;
   margin-right: 5rem;
+
+  @media screen and (max-width: 900px) {
+    margin-right: 0;
+    justify-content: center;
+    align-items: center;
+  }
+}
+
+
+.app__skills-heading {
+  flex: 1;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  align-items: flex-start;
+  margin-right: 5rem;
+  font-size: 1.5rem !important;
+  text-decoration: underline;
+  margin-bottom: 10px;
 
   @media screen and (max-width: 900px) {
     margin-right: 0;
