--- a/src/App.scss
+++ b/src/App.scss
@@ -394,3 +394,18 @@
 
 
 }
+
+
+.main-skills__items {
+  //margin-top: 150px;
+  background: #fff;
+  padding: 2rem;
+  max-width: 1000px;
+  margin-left: auto;
+  margin-right: auto;
+  border-radius: 0.5rem;
+
+  @media(max-width: 767px) {
+    margin-bottom: 1rem;
+  }
+}
