--- a/src/container/Skills/Skills.scss
+++ b/src/container/Skills/Skills.scss
@@ -72,6 +72,9 @@
 
     &:hover {
       box-shadow: 0 0 25px #fef4f5;
+      background-color: rgba(110, 149, 196, 0.25) !important;
+      transition: all 0.3s ease;
+
     }
 
     @media screen and (min-width: 2000px) {
