--- a/src/App.scss
+++ b/src/App.scss
@@ -493,21 +493,32 @@ code {
 .codeStyle {
   width: 100%;
   margin: 20px auto !important;
-
+  font-size: 16px;
+  padding: 1.5rem !important;
 
   @media(max-width: 976px) {
-    font-size: 14px;
+    font-size: 15px;
   }
 
   @media(max-width: 767px) {
-    font-size: 13px;
+    font-size: 14px;
   }
 
   @media(max-width: 600px) {
-    font-size: 12px;
+    font-size: 13px;
   }
 
   @media(max-width: 500px) {
-    font-size: 10px;
+    font-size: 12px;
   }
+}
+
+
+span.linenumber { display: none !important; }
+
+.skill-name_overflow {
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  max-width: 80px;
 }
