made additional changes to the skill page

--- a/src/App.scss
+++ b/src/App.scss
@@ -406,7 +406,7 @@
 .single-skill__markdown {
   background: #fff;
   padding: 2rem;
-  max-width: 800px;
+  width: 800px;
   margin-left: auto;
   margin-right: auto;
   padding-left: 4rem;
@@ -490,7 +490,7 @@ code {
 
 
   ::selection {
-    background: #706c6c;
+    background: #8b8b8b;
   }
 }
 
