--- a/src/container/Skills/Skills.scss
+++ b/src/container/Skills/Skills.scss
@@ -10,6 +10,7 @@
 
   display: flex;
   flex-direction: row;
+  justify-content: center;
 
   @media screen and (max-width: 900px) {
     width: 100%;
@@ -73,6 +74,59 @@
     &:hover {
       box-shadow: 0 0 25px #fef4f5;
       background-color: rgba(110, 149, 196, 0.25) !important;
+      transition: all 0.3s ease;
+
+    }
+
+    @media screen and (min-width: 2000px) {
+      width: 150px;
+      height: 150px;
+    }
+
+    @media screen and (max-width: 450px) {
+      width: 70px;
+      height: 70px;
+    }
+  }
+
+  p {
+    font-weight: 500;
+    margin-top: 0.5rem;
+  }
+
+  @media screen and (min-width: 2000px) {
+    margin: 1rem 2rem;
+
+    p {
+      margin-top: 1rem;
+    }
+  }
+}
+
+
+
+.app__cert-item {
+  flex-direction: column;
+  text-align: center;
+
+  margin: 1rem;
+
+  transition: all 0.3s ease-in-out;
+
+  div {
+    width: 90px;
+    height: 90px;
+    border-radius: 50%;
+    background-color: #fff;
+
+    img {
+      width: 50%;
+      height: 50%;
+    }
+
+    &:hover {
+      box-shadow: 0 0 25px #fef4f5;
+      //background-color: rgba(110, 149, 196, 0.25) !important;
       transition: all 0.3s ease;
 
     }
