made changes to the single skill/main skill page

--- a/src/pages/mainSkill/MainSkill.scss
+++ b/src/pages/mainSkill/MainSkill.scss
@@ -198,7 +198,7 @@ ul li::marker {
 }
 
 .work__all-projects {
-  margin-bottom: 20px;
+  //margin-bottom: 20px;
   text-decoration: none;
   color: var(--secondary-color);
   font-weight: 600;
