--- a/src/pages/project/SingleProject.scss
+++ b/src/pages/project/SingleProject.scss
@@ -198,7 +198,7 @@ ul li::marker {
 }
 
 .work__all-projects {
-  margin-bottom: 20px;
+  //margin-bottom: 20px;
   text-decoration: none;
   color: var(--secondary-color);
   font-weight: 600;
