--- a/src/pages/skill/SingleSkill.scss
+++ b/src/pages/skill/SingleSkill.scss
@@ -216,7 +216,7 @@ ul li::marker {
 }
 
 .work__all-projects {
-  margin-bottom: 20px;
+  //margin-bottom: 20px;
   text-decoration: none;
   color: var(--secondary-color);
   font-weight: 600;
