made changes to skills page

--- a/src/container/Skills/Skills.scss
+++ b/src/container/Skills/Skills.scss
@@ -52,6 +52,12 @@
   }
 }
 
+
+
+.app__skills-heading-2:hover {
+  color: #a1a0a1;
+}
+
 .app__skills-item {
   flex-direction: column;
   text-align: center;
