--- a/src/App.scss
+++ b/src/App.scss
@@ -8,6 +8,43 @@
 |   |   |   |   Preloader
 ================================================ */
 
+
+.stars__canvas-styles {
+  position: absolute;
+  width: 100%;
+  height: auto;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  left: 0;
+  z-index: -1;
+  background-color: #000000;
+}
+
+.earth__canvas-styles {
+
+  width: 550px;
+
+  @media (min-width: 768px) {
+      height: 550px;
+  }
+
+    height: 350px;
+
+
+
+  @media (min-width: 1280px) {
+      height: auto;
+  }
+
+  @media (min-width: 1280px) {
+      flex: 1 1 0%;
+  }
+}
+
+
+
+
 .preloader {
   background-color: white;
   position: fixed;
