--- a/src/App.scss
+++ b/src/App.scss
@@ -23,13 +23,14 @@
 
 .earth__canvas-styles {
 
-  width: 550px;
+  width: 600px;
+  height: 600px;
 
-  @media (min-width: 768px) {
-      height: 550px;
+  @media screen and (max-width: 767px) {
+      height: 350px;
+      width: 350px;
   }
 
-    height: 350px;
 
 
 
