--- a/src/App.scss
+++ b/src/App.scss
@@ -34,13 +34,13 @@
 
 
 
-  @media (min-width: 1280px) {
-      height: auto;
-  }
-
-  @media (min-width: 1280px) {
-      flex: 1 1 0%;
-  }
+  //@media (min-width: 1280px) {
+  //    height: auto;
+  //}
+  //
+  //@media (min-width: 1280px) {
+  //    flex: 1 1 0%;
+  //}
 }
 
 
