--- a/src/container/VideoHeader/VideoHeader.scss
+++ b/src/container/VideoHeader/VideoHeader.scss
@@ -38,7 +38,7 @@
   top: 0;
   left: 0;
   width: 100%;
-  height: 100%;
+  height: 100vh;
   background-color: #ffffffcc;
   //background-color: #edf2f8cc;
   //background-color: rgba(0,0,0,.8);
