--- a/src/container/Work/Work.scss
+++ b/src/container/Work/Work.scss
@@ -74,6 +74,20 @@
   }
 }
 
+#light .app__work-portfolio {
+  .app__work-item {
+    background-color: #fff;
+    color: #000;
+  }
+}
+
+#dark .app__work-portfolio {
+  .app__work-item {
+    //background-color: rgba(18, 18, 18, .65);
+    background-color: var(--dp04);
+  }
+}
+
 .app__work-img {
   width: 100%;
   height: 230px;
@@ -154,17 +168,34 @@
   }
 }
 
-.work__mobile-links {
-  //@media screen and (min-width: 913px) {
-  //  display: flex;
-  //}
+#light .app__work-content {
+  .app__work-tag {
+    background-color: #fff;
+  }
+}
 
-  //@media screen and (max-width: 912px) {
+#dark .app__work-content {
+  .app__work-tag {
+    background-color: var(--dp04);
+  }
+}
+
+#light .app__work-content {
+  .app__work-tag2 {
+    background-color: #fff;
+  }
+}
+
+#dark .app__work-content {
+  .app__work-tag2 {
+    background-color: var(--dp04);
+  }
+}
+
+.work__mobile-links {
     width: 50px;
     height: 50px;
     border-radius: 50%;
-    //background-color: rgba(0, 0, 0, 0.5);
-
     color: #828282;
     margin: 1rem;
     font-family: var(--font-base);
@@ -172,20 +203,38 @@
     cursor: pointer;
     background-color: #f0f4fc;
     border: 1px solid #a1a0a1;
-  //}
-
   .work__mobile-link-svg {
-    //@media screen and (max-width: 912px) {
       width: 30px;
       height: 30px;
-    //}
   }
 }
-
 
 .work__mobile-links:hover {
   color: #fff;
   background-color: var(--secondary-color);
+}
+
+#light .work__mobile-links {
+  color: #828282;
+  background-color: #f0f4fc;
+  border: 1px solid #a1a0a1;
+}
+
+#dark .work__mobile-links {
+  color: #828282;
+  background-color: var(--dp06);
+  border: 1px solid #a1a0a1;
+}
+
+#light .work__mobile-links:hover {
+  color: #fff;
+  background-color: var(--secondary-color);
+}
+
+#dark .work__mobile-links:hover {
+  color: #fff;
+  background-color: var(--dp24);
+  border: 1px solid #fff;
 }
 
 
