--- a/src/App.scss
+++ b/src/App.scss
@@ -254,9 +254,29 @@
   font-family: var(--font-base);
 }
 
+#light .app {
+  background-color: var(--primary-color);
+  font-family: var(--font-base);
+}
+
+#dark .app {
+  background-color: var(--dp00);
+  font-family: var(--font-base);
+}
+
 .app__whitebg {
   background-color: var(--white-color);
 }
+
+#light .app__whitebg {
+  background-color: var(--white-color);
+}
+
+#dark .app__whitebg {
+  background-color: var(--dp01);
+}
+
+
 
 .app__primarybg {
   background-color: var(--primary-color);
