--- a/src/App.scss
+++ b/src/App.scss
@@ -370,6 +370,32 @@
   }
 }
 
+
+.special-copyright {
+  width: 100%;
+  padding: 2rem 0 0;
+
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-end;
+  align-items: flex-end;
+  position: absolute;
+  top: 85%;
+  padding-right: 4rem;
+
+  @media screen and (max-width: 976px) {
+    padding-right: 2rem;
+  }
+
+  p {
+    text-transform: uppercase;
+    color: var(--black-color);
+  }
+}
+
+
+
+
 .head-text {
   font-size: 2.75rem;
   font-weight: 800;
@@ -420,6 +446,8 @@
 }
 
 
+
+
 #light .p-text {
   color: var(--gray-color);
 
@@ -427,8 +455,20 @@
 
 #dark .p-text {
   color: #e2e8f0;;
-
 }
+
+.copy-text {
+  color: var(--secondary-color);
+}
+
+#light .copy-text {
+  color: var(--secondary-color);
+}
+
+#dark .copy-text {
+  color: #e2e8f0;;
+}
+
 
 
 .bold-text {
